Admin Auth Configuration with Angular

--- a/Frontend/easybank/src/app/components/sidebar/sidebar.component.html
+++ b/Frontend/easybank/src/app/components/sidebar/sidebar.component.html
@@ -34,8 +34,8 @@
             <span>Settings</span>
           </a>
         </li>
-        <li>
-          <a href="">
+        <li *ngIf="this.auth">
+          <a href="" routerLink="/dashboard/admin">
             <span><i class="far fa-chart-bar"></i></span>
             <span>Stats</span>
           </a>
