--- a/Frontend/easybank/src/app/components/dashboard/dashboard.component.html
+++ b/Frontend/easybank/src/app/components/dashboard/dashboard.component.html
@@ -63,6 +63,7 @@
 
   <main>
     <h2 class="title">Hello, {{user.username}} Welcome to Your Dashboard</h2>
+    <button (click)="toggletheme()">theme</button>
     <div class="cards-section">
 
         <div class="card">
