--- a/Frontend/easybank/src/app/components/login/login.component.css
+++ b/Frontend/easybank/src/app/components/login/login.component.css
@@ -169,6 +169,25 @@ label {
 
 }
 
+/* default and hover color */
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
+    color:var(--dashboard-main);
+}
+
+/* focused color */
+::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick {
+    color:var(--dashboard-text);
+}
+
+/* floating label color */
+::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-label { 
+    color:var(--dashboard-text); 
+}
+
+::ng-deep .mat-tab-label{
+    color:var(--dashboard-text); 
+}
+
 @media screen and (min-width: 900px){
     .login-sections{
         flex-direction: row;
