--- a/Frontend/easybank/src/app/components/dashboard/dashboard.component.html
+++ b/Frontend/easybank/src/app/components/dashboard/dashboard.component.html
@@ -56,7 +56,7 @@
     </div>
 
     <div class="icons">
-      <span class="ti-palette"></span>
+      <!-- <span class="ti-palette"></span> -->
       <div></div>
     </div>
   </header>
