--- a/Frontend/easybank/src/app/components/transfer/transfer.component.css
+++ b/Frontend/easybank/src/app/components/transfer/transfer.component.css
@@ -39,7 +39,66 @@ form{
 .mat-form-field{
     width:100%;
     font-size: 15px;
+    color:var(--dashboard-text);
 }
+
+.mat-form-field input p{
+    color:var(--dashboard-text);
+}
+
+.mat-form-field mat-label {
+    color:var(--dashboard-text);
+    border-color: var(--dashboard-text);
+}
+
+.mat-form-field-appearance-outline.mat-form-field-invalid.mat-form-field-invalid .mat-form-field-outline-thick {
+    color: #f44336;
+}
+
+.mat-form-field .mat-input-element{
+    color:var(--dashboard-text);
+}
+
+.mat-input-element::placeholder{
+    color:var(--dashboard-text);
+}
+
+.mat-form-field-appearance-outline .mat-form-field-outline {
+    color:var(--dashboard-text);
+    border-color: var(--dashboard-text);
+}
+
+.mat-form-field-appearance-outline .mat-form-field-outline-thick {
+    color:var(--dashboard-text);
+    border-color: var(--dashboard-text);
+
+}
+
+.input.mat-input-element {
+    color:var(--dashboard-text);
+    border-color: var(--dashboard-text);
+
+}
+
+/* default and hover color */
+::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline {
+    color:var(--dashboard-main);
+}
+
+/* focused color */
+::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick {
+    color:var(--dashboard-text);
+}
+
+/* floating label color */
+::ng-deep .mat-form-field-appearance-outline.mat-focused .mat-form-field-label { 
+    color:var(--dashboard-text); 
+}
+
+::ng-deep .mat-tab-label{
+    color:var(--dashboard-text); 
+}
+
 
 .code-container{
     display: flex;
