--- a/Frontend/easybank/src/app/components/sidebar/sidebar.component.html
+++ b/Frontend/easybank/src/app/components/sidebar/sidebar.component.html
@@ -2,8 +2,7 @@
 <div class="sidebar">
     <div class="sidebar-header">
       <h3 class="brand">
-        <span class="ti-unlink"></span>
-        <span>EasyBank</span>
+        <span class="side-logo">EasyBank</span>
       </h3>
       <label for="sidebar-toggle" class="ti-menu-alt"></label>
     </div>
