--- a/Frontend/easybank/src/app/components/settings/settings.component.html
+++ b/Frontend/easybank/src/app/components/settings/settings.component.html
@@ -1,68 +1,27 @@
 <div class="dashboard-container">
 
-    <input type="checkbox" id="sidebar-toggle">
-    <!-- <div class="sidebar">
-      <div class="sidebar-header">
-        <h3 class="brand">
-          <span class="ti-unlink"></span>
-          <span>EasyBank</span>
-        </h3>
-        <label for="sidebar-toggle" class="ti-menu-alt"></label>
-      </div>
-    
-      <div class="sidebar-menu">
-        <ul>
-          <li>
-            <a href="">
-              <span class="ti-home"></span>
-              <span>Home</span>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <span class="ti-credit-card"></span>
-              <span>Payments</span>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <span class="ti-settings"></span>
-              <span>Settings</span>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <span class="ti-bar-chart"></span>
-              <span>Stats</span>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <span></span>
-              <span></span>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div> -->
-    
+    <!-- <input type="checkbox" id="sidebar-toggle"> -->
     <app-sidebar></app-sidebar>
     
     <div class="dashboard-content">
       <header>
         <div class="search-container">
-          <!-- <span class="ti-search"></span>
-          <input type="search" placeholder="search" /> -->
         </div>
     
         <div class="icons">
-          <span class="ti-palette"></span>
           <div></div>
         </div>
       </header>
     
       <main>
         <h2 class="title">Dashboard Settings</h2>
+
+        <mat-tab-group>
+          <mat-tab label="First"> Content 1 </mat-tab>
+          <mat-tab label="Second"> Content 2 </mat-tab>
+          <mat-tab label="Third"> Content 3 </mat-tab>
+        </mat-tab-group>
+        
 
         <h3>Payment Methods</h3>
         <div class="cards-section">
