--- a/Frontend/easybank/src/app/components/sidebar/sidebar.component.html
+++ b/Frontend/easybank/src/app/components/sidebar/sidebar.component.html
@@ -1,10 +1,10 @@
-<!-- <p>sidebar works!</p> -->
+
 <div class="sidebar">
     <div class="sidebar-header">
       <h3 class="brand">
         <span class="side-logo">EasyBank</span>
       </h3>
-      <label for="sidebar-toggle" class="ti-menu-alt"></label>
+      <!-- <label for="sidebar-toggle" class="ti-menu-alt"></label> -->
     </div>
   
     <div class="sidebar-menu">
@@ -33,14 +33,14 @@
             <span>Settings</span>
           </a>
         </li>
-        <li *ngIf="this.auth">
+        <li *ngIf="this.auth == true">
           <a href="" routerLink="/dashboard/admin">
             <span><i class="far fa-chart-bar"></i></span>
             <span>Stats</span>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="" (click)="SignOut()">
             <span><i class="fas fa-user"></i></span>
             <span>Sign Out</span>
           </a>
