--- a/Frontend/easybank/src/app/components/login/login.component.html
+++ b/Frontend/easybank/src/app/components/login/login.component.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="right">
-        <form class="loginform" (ngSubmit)="onLoginButtonClick()" #loginform="ngForm">
+        <form class="loginform form-top" (ngSubmit)="onLoginButtonClick()" #loginform="ngForm">
             <section class="login-section">
                 <h2>Sign In</h2>
                 <div class="login-container">
@@ -19,28 +19,29 @@
                     </a></p>
                 </div>
             </section>
-            <div class="input-container name">
+            <mat-form-field appearance="outline">
+                <mat-label>Username</mat-label>
+                <input matInput name="username" ngModel required>
+                <mat-error *ngIf="email.invalid">{{getEmailErrorMessage()}}</mat-error>
+              </mat-form-field>
+              <mat-form-field appearance="outline">
+                <mat-label>Enter your password</mat-label>
+                <input matInput [type]="hide ? 'password' : 'text'" name="password" ngModel required>
+                
+                <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                </button>
+                <mat-error *ngIf="formfield.invalid">{{getErrorMessage()}}</mat-error>
+              </mat-form-field>
+            <!-- <div class="input-container name">
                 <label for="fname">Username</label>
                 <input id="fname" name="fname" type="text" ngModel>
             </div>
-            <!-- <div class="input-container email">
-                <label for="email">Email</label>
-                <input id="email" name="email" type="text">
-            </div> -->
             <div class="input-container password">
                 <label for="password">Password</label>
                 <input id="password" name="password" type="password" ngModel>
-                <!-- <i class="far fa-eye-slash"></i> -->
-            </div>
-            <!-- <div class="input-container password">
-                <label for="password">Confirm Password</label>
-                <input id="password" name="password" type="password">
-                <i class="far fa-eye-slash"></i>
+
             </div> -->
-            <!-- <div class="input-container password">
-                <label for="password">4 Digit Secure Code</label>
-                <input id="password" name="password" type="password">
-            </div> -->
+
             <button class="login-button" type="submit">Sign In</button>
         </form>
     </div>
